// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageViewerMenu component test suite Snapshot render DownloadListItem Snapshot render, should render DownloadListItem 1`] = `
<li
  className="mdc-list-item "
  onClick={[Function]}
>
  topBar.messageViewerMenu.download
</li>
`;

exports[`MessageViewerMenu component test suite Snapshot render MessageViewerMenu Snapshot render, visible, should render message-viewer-menu 1`] = `
<div
  aria-hidden={false}
  className="message-viewer-menu mdc-menu mdc-menu-surface
      mdc-menu-surface--open"
>
  <ul
    className="mdc-list mdc-list--dense"
  >
    <DownloadListItem
      t={[MockFunction]}
    />
  </ul>
</div>
`;

exports[`MessageViewerMenu component test suite Snapshot render MessageViewerMenu Snapshot render, visible=false, should render message-viewer-menu "hidden 1`] = `
<div
  aria-hidden={true}
  className="message-viewer-menu mdc-menu mdc-menu-surface
      "
>
  <ul
    className="mdc-list mdc-list--dense"
  >
    <DownloadListItem
      t={[MockFunction]}
    />
  </ul>
</div>
`;
